<resources>
    <string name="app_name">BU3DMusuem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Southeast Asian Ceramics Museum Bangkok University</string>
    <string name="nav_header_subtitle">museum@bu.ac.th</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_perma_exhi">Permanent Exhibition</string>
    <string name="menu_location">Location</string>
    <string name="menu_opening_hours">Opening Hours</string>
    <string name="menu_getting">Getting Here</string>
    <string name="menu_visitor">Visitor Regulation</string>
    <string name="menu_contact">Contact Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="History_des_1">The Southeast Asian Ceramics Museum (SEACM) was established in 2000 to commemorate the 40th anniversary of Bangkok University. The museum, which houses the ancient ceramics donated by Mr. Surat Osathanugrah, the founder of Bangkok University, aims to instill an appreciation for Thai cultural heritage in all visitors. At the beginning, the museum was named “Bangkok University Museum”. \n\nIn 2002, Bangkok University began the construction of the underground museum connecting to the Surat Osathanugrah Library. The design of the museum imitates the design of ancient Thai kilns which were built partially underground, and this inspired the idea of having the museum partially underground as well. The museum was granted the 2008 Gold Medal Award, Category: Education Building or Religious Building, and the 2009 ASA Green Award as one of the nine outstanding green buildings in Thailand. The museum proper is comprised of the permanent and special exhibition halls, museum book store, and ceramic shard archive. \n\nIn 2004, Bangkok University continued to expand the museum with the building of a three-story museum annex connecting to the exhibition halls. A main office, meeting rooms, lecture rooms, visiting researchers’ room, library, conservation laboratory, and storage room were provided in the annex to support the missions of research and educational promotion and to build upon best practices in museology.</string>
    <string name="History_des_2">\nThe Southeast Asian Ceramics Museum opened to the public on May 11, 2005; and Her Royal Highness Princess Maha Chaki Sirindhorn graciously presided over the official inauguration of the Southeast Asian Ceramics Museum on November 20, 2009. \n\nIn 2017, the museum was granted the Museum Thailand Awards, Category: Popular Vote.</string>
    <string name="permanent_exhi">The permanent exhibition entitled “The Development of Historical Ceramics in Thailand and Ceramic Trade in Southeast Asia” highlights the development of historical ceramics, which were made at kilns in Thailand and ceramics made at kilns in China, Vietnam and Myanmar that were imported by Thailand in ancient times. There is an extensive range of prehistoric pottery from Ban Chiang and other sites in central Thailand, as well as Khmer ceramics from the Phnom Dangrek kilns in Thailand and the Phnom Kulen kilns in the Cambodia. The museum is home to the largest accessible collection of ceramics from the Tak-Omkoi burial sites of western Thailand, and it features the first illustrated chronology for Thai trade ceramics.</string>
    <string name="contact_us_address">Address</string>
    <string name="contact_us_address_des">Southeast Asian Ceramics Museum Bangkok University, Rangsit Campus 9/1, Moo 5, Phaholyothin Road, Klong Luang, Pathum Thani 12120 Thailand\n\n\n</string>
    <string name="contact_us_Tel">Tel</string>
    <string name="contact_us_Tel_des">\n\t+66 2407 3888 ext. 2890\n</string>
    <string name="contact_us_Fax">Fax</string>
    <string name="contact_us_Fax_des">\n\t+66 2407 3999 (auto)\n</string>
    <string name="contact_us_email">Email</string>
    <string name="contact_us_email_des">\n\tmuseum@bu.ac.th\n</string>
    <string name="location_des">Southeast Asian Ceramics Museum \n\nBangkok University, Rangsit Campus \n\n9/1, Moo 5, Phaholyothin Road, Klong Luang, Pathum Thani 12120 Thailand \n\nTel : +66-2407-3888 ext. 2890 \n\nFax : +66-2407-3999 (auto) \n\nE-mail : museum@bu.ac.th</string>
    <string name="opening_hours_Title">Opening Hours</string>
    <string name="opening_hours_des">Open Monday-Friday, 10 a.m.- 4 p.m. Closed on Saturday and Sunday, public holidays and during the semester break periods of the university.</string>
    <string name="opening_hours_calendar">Calendar of Holidays</string>
    <string name="opening_hours_calendar_des">1-2 January 2020 \n\t\t\t\t- New Year’s Day \n\n8-10 February 2020 \n\t\t\t\t- Makha Bucha and Substitute Makha Bucha Days \n\n14 March-6 May 2020 \n\t\t\t\t- Due to COVID-19 Infection Prevention and Control \n\n3 June 2020 \n\t\t\t\t- H.M. Queen Suthida Bajrasudhabimalalakshana’s Birthday \n\n4-7 July 2020 \n\t\t\t\t- Asalha Bucha, Buddhist Lent and Substitute Asalha Bucha Days \n\n28 July 2020 \n\t\t\t\t- H.M. King Maha Vajiralongkorn Bodindradebayavarangkun’s Birthday \n\n12 August 2020 \n\t\t\t\t- H.M. Queen Sirikit’s Birthday and Mother’s Day \n\n13 October 2020 \n\t\t\t\t- H. M. the late King Bhumibol Adulyadej Memorial Day \n\n23 October 2020 \n\t\t\t\t- Chulalongkorn Day \n\n5-7 December 2020 \n\t\t\t\t- H.M. the late King Bhumibol Adulyadej’s Birthday, Father’s Day and Substitution \n\n10 December 2020 \n\t\t\t\t- Constitution Day \n\n25 December 2020-3 January 2021 \n\t\t\t\t- Semester Break</string>
    <string name="visitor_groupvisit">Group Visits</string>
    <string name="visitor_groupvisit_des">The Southeast Asian Ceramics Museum welcomes visitor groups for free self-guided visits. You can submit your letter of request to Vice President for Administrative Affairs 2 weeks before your intended arrival at Fax +662-407-3999 or E-mail at museum@bu.ac.th.</string>
    <string name="visitor_photofilming">Photography and Filming</string>
    <string name="visitor_photofilming_des">The Southeast Asian Ceramics Museum supports photography and filming for educational purposes. Photographs may not be reproduced, redistributed or commercially used without official permission from the museum.</string>
    <string name="visitor_generalragulations">General Ragulations</string>
    <string name="visitor_generalragulations_des">1. No food or drink \n2. No smoking \n3. No flash \n4. Keep belongings inside locker \n5. Do not touch the exhibits \n6. No loud noise</string>
    <string name="item_languages">Languages</string>
    <string name="getting_here_title">Public Transportation</string>
    <string name="getting_here_des">1. BMTA Van \nRoute 85 (Victory Monument-Thammasat University, Rangsit Campus) \n\nRoute 118 (Mo Chit BTS Station’s Parking Lots-Thammasat University, Rangsit Campus) \n\n\n2. BMTA Bus \nRoute 29 (Hua Lampong Railway Station-Thammasat University, Rangsit Campus) \n\nRoute 34 (Hua Lampong Railway Station-Thammasat University, Rangsit Campus) \n\nRoute 39 (Sanam Luang-Thammasat University, Rangsit Campus) \n\nRoute 59 (Sanam Luang-Thammasat University, Rangsit Campus) \n\nRoute 95 (Bang Kapi-Rangsit) \n\nRoute 504 (Thonburirom Park-Rangsit) \n\nRoute 510 (Victory Monument-Thammasat University, Rangsit Campus) \n\nRoute 520 (Bang Kapi-Rangsit) \n\n\n3. The Transport Co. Ltd. \nAll Northern and Northeastern Routes start from Mo Chit Bus Terminal.</string>
    <string name="artifact1_info">Type : Bowl \n\nDecoration type : Black Pattern Bowl Sukhothai \n\nProduction sites : Sukhothai Kiln, Sukhothai Province \n\nAge : 20-21 Buddhist century \n\nSize : height 7.8 cm. Diameter 25.7 cm. \n\nCharacteristics : A bowl with a flat mouth, deep, upright, black writing under clear glaze. Inside the bottom in the middle, write a fish pattern in a circle frame. There is a trace of flattened secondary material The edge of the mouth is written with a ring pattern. Outside, parallel, horizontal, uncoated bottom, ground texture, brown.</string>
    <string name="artifact2_info">Type : Plate \n\nDecoration type : Black Pattern Dish Sukhothai \n\nProduction sites : Sukhothai Kiln, Sukhothai Province \n\nAge : 20-21 Buddhist century \n\nSize : height 7.5 cm. Diameter 31.2 cm. \n\nCharacteristics : The plate has a flat, deep, upright edge. Thin edge is written in black. In the middle of writing a double fish pattern They are eating plants in a circular frame with marks, a circular substrate, a flat shape, a flower stalk. \nCurl the edge of the mouth, write with Kan Khot pattern. On the outside, Kan Khot pattern in a horizontal parallel frame, uncoated bottom, brown soil texture. Dark, wth burn marks</string>
    <string name="artifact3_info">Type : Plate \n\nDecoration type : Black Pattern Dish Sukhothai \n\nProduction sites : Sukhothai Kiln, Sukhothai Province \n\nAge : 20-21 Buddhist century \n\nSize : height 7.2 cm. Diameter 29.9 cm. \n\nCharacteristics : The plate has a flat, deep, upright edge. Thin edge is written in black.In the middle of writing a fish pattern in a circle frame There is a trace of the secondary burnt material, a round, flat shape, a flower pattern, a stem dividing the mouth, writing \nCurved lines in a horizontal parallel frame Outwardly, curved lines in a horizontal parallel frame, uncoated bottom. Dark brown</string>
    <string name="artifact4_info">Type : Bowl \n\nDecoration type : Black Pattern Bowl Sukhothai \n\nProduction sites : Sukhothai Kiln, Sukhothai Province \n\nAge : 20-21 Buddhist century \n\nSize : height 7.6 cm. Diameter 21.9 cm. \n\nCharacteristics : The bowl is deep, upright, with a thin edge, painted in black, glazed not to the foot. Inside the middle, write a machine pattern inside The circle frame has a scratch, a circular substrate, a flat round, the writing pattern of the brush tip. Lip line Outside, horizontal parallel lines, uncoated bottom, earthy texture, brownish red</string>
    <string name="artifact5_info">Type : Plate \n\nDecoration type : Black Pattern Dish Sukhothai \n\nProduction sites : Sukhothai Kiln, Sukhothai Province \n\nAge : 20-21 Buddhist century \n\nSize : height 5.9 cm. Diameter 20.0 cm. \n\nCharacteristics : The plate has a flat, deep, upright edge. Thin edge is written in black. In the middle, write a bouquet of flowers in a circle frame. There is a trace of flattened secondary material The edge of the mouth is written with a flick pattern at the tip of the brush. Horizontal straight line exterior, uncoated bottom, brown soil texture</string>
    <string name="artifact6_info">Type : Plate \n\nDecoration type : Black Pattern Dish Sukhothai \n\nProduction sites : Sukhothai Kiln, Sukhothai Province \n\nAge : 20-21 Buddhist century \n\nSize : height 6.0 cm. Diameter 25.0 cm. \n\nCharacteristics : Deep body plate, upright, thin edge, underneath painted, glazed not to the foot. Inside the middle, write a stem dig pattern. In the ring frame there is a trace of a flat circular burner material. Outside, parallel lines, horizontal, uncoated bottom, earthy texture Sugar</string>
    <string name="Thai">ภาษาไทย</string>
    <string name="English">English</string>
</resources>