<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ContactUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contact_img"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:src="@drawable/contact_us"/>
        <TextView
            android:id="@+id/address_Title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/contact_us_address"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#ffff"/>

        <TextView
            android:id="@+id/contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/contact_us_address_des"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tel_Title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/contact_us_Tel"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/contact_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/contact_us_Tel_des"/>

        <TextView
            android:id="@+id/fax_Title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/contact_us_Fax"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/contact_fax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/contact_us_Fax_des"/>
        <TextView
            android:id="@+id/email_Title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/contact_us_email"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/contact_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/contact_us_email_des"/>

    </LinearLayout>

</ScrollView>