<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.VisitorRegulationFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/visit_img"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:src="@drawable/visitorregulation"/>
        <TextView
            android:id="@+id/group_Title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/visitor_groupvisit"
            android:textColor="#ffff"/>
        <TextView
            android:justificationMode="inter_word"
            android:id="@+id/group_visit"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/visitor_groupvisit_des"/>

        <TextView
            android:id="@+id/photo_Title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/visitor_photofilming"
            android:textColor="#ffff"/>
        <TextView
            android:justificationMode="inter_word"
            android:id="@+id/photography"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/visitor_photofilming_des"/>

        <TextView
            android:id="@+id/general_Title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/visitor_generalragulations"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/general"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/visitor_generalragulations_des"/>

    </LinearLayout>


</ScrollView>