<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.OpeningHoursFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/opening_img"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:src="@drawable/openhours" />

        <TextView
            android:id="@+id/titleOpening"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/opening_hours_Title"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/opening_text_one"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/opening_hours_des"/>

        <TextView
            android:id="@+id/titleCalendar"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/TextBackground"
            android:textSize="20dp"
            android:text="@string/opening_hours_calendar"
            android:textColor="#ffff"/>
        <TextView
            android:id="@+id/opening_text_two"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/opening_hours_calendar_des"/>

    </LinearLayout>

</ScrollView>